--- a/app/assets/stylesheets/pages/_show_offers.scss
+++ b/app/assets/stylesheets/pages/_show_offers.scss
@@ -1,4 +1,8 @@
 
-// .container.wrap-show {
-//   background-color: #0074E4;
+// .container.offer {
+//   background-color: #E3F8FF;
+// }
+
+// body.offer{
+//   background-color: #E3F8FF;
 // }
