spacing between cards

--- a/app/assets/stylesheets/pages/_show_offers.scss
+++ b/app/assets/stylesheets/pages/_show_offers.scss
@@ -1,8 +1,8 @@
-
-// .container.offer {
-//   background-color: #E3F8FF;
-// }
-
-// body.offer{
-//   background-color: #E3F8FF;
-// }
+.product-body {
+  h4 {
+    margin: 30px;
+  }
+  h6 {
+    margin: 0 0 8px 0px;
+  }
+}
