--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,27 +1,29 @@
 <div class="banner" style="background: url('<%= image_path "pay_photo.jpg" %>')">
-  <div class="banner-content">
-    <h2>You're just one step away from your awesome ski trip!</h2>
+  <div class="container">
+    <div class="banner-content">
+      <h2>You're just one step away from your awesome ski trip!</h2>
 
-    <%= form_tag order_payments_path(@order) do %>
-    <br />
-    <center>
-      <article>
-        <label class="amount">
-          <span>Amount: <%= humanized_money(@order.amount) %>€</span>
-        </label>
-      </article>
+      <%= form_tag order_payments_path(@order) do %>
+      <br />
+      <center>
+        <article>
+          <label class="amount">
+            <span>Amount: <%= humanized_money(@order.amount) %>€</span>
+          </label>
+        </article>
+      </center>
+      <br><br />
+      <center>
+        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+        data-name="SnowBot"
+        data-email="<%= current_user.email %>"
+        data-description="My Ski Trip<%= @order.id %>"
+        data-amount="<%= @order.amount_cents %>"
+        data-currency="<%= @order.amount.currency %>">
+      </script>
     </center>
-    <br><br />
-    <center>
-      <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-      data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-      data-name="SnowBot"
-      data-email="<%= current_user.email %>"
-      data-description="My Ski Trip<%= @order.id %>"
-      data-amount="<%= @order.amount_cents %>"
-      data-currency="<%= @order.amount.currency %>">
-    </script>
-  </center>
-  <% end %>
+    <% end %>
+  </div>
 </div>
 </div>
