only first_name on orders page

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,11 +1,8 @@
 <div class="container">
 
-  <h1>Your trips</h1>
+  <h1>Your Trips</h1>
   <hr>
-  <h4>Email: <%= current_user.email %></h4>
-
-  <h4><%= "First Name: #{current_user.first_name}" unless current_user.first_name.nil? %></h4>
-  <h4><%= "Last Name: #{current_user.last_name}" unless current_user.last_name.nil? %></h4>
+  <h4 class="text-center"><%= "#{current_user.first_name}" unless current_user.first_name.nil? %></h4>
 
   <% current_user.orders.each do |order| %>
     <div class="row separator">
