--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -42,7 +42,7 @@
     <div class="card-body product-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path @offer.flat_photo %>);">
       <div class="card-category-bot"></div>
       <div class="card-description-bot"><h5><%= "#{@offer.flat_bedrooms_nb }" " bedroom".pluralize(@offer.flat_bedrooms_nb) %></h5>
-        <p>Flat rating: <%= @offer.flat_ratings %></p>
+        <p>Flat Rating: <%= @offer.flat_ratings %></p>
       </div>
     </div>
     <div class='product-body'>
@@ -55,7 +55,7 @@
   <div class="product">
     <div class="card-body product-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path @offer.car_photo %>);">
       <div class="card-category-bot"></div>
-      <div class="card-description-bot"><h5>2 000km</h5>
+      <div class="card-description-bot"><h5>2.000 kms</h5>
       </div>
     </div>
     <div class='product-body'>
