add details of resort on order index

--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -23,7 +23,7 @@
       <div class="card-category-bot"></div>
       <div class="card-description-bot">
         <h5><%= @offer.domain.name %></h5>
-        <p><%= @offer.domain.mountain_chain.gsub("-", " ").titleize { |match|  } %></p>
+        <p><%= @offer.domain.mountain_chain.gsub("-", " ").titleize %></p>
       </div>
     </div>
     <div class='product-body'>
