--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -42,7 +42,8 @@
   <div class="product">
     <div class="card-body product-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path @offer.flat_photo %>);">
       <div class="card-category-bot"></div>
-      <div class="card-description-bot"><h5><%= "#{@offer.flat_bedrooms_nb }" " bedroom".pluralize(@offer.flat_bedrooms_nb) %></h5>
+      <div class="card-description-bot">
+        <h5><%= "#{@offer.flat_bedrooms_nb }" " bedroom".pluralize(@offer.flat_bedrooms_nb) %></h5>
         <p>Flat Rating: <%= "%0.1f" % @offer.flat_ratings %></p>
       </div>
     </div>
