--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -3,22 +3,22 @@
   <div class="product">
     <div class='product-body'>
       <h4><center><%= @offer.user.first_name %>,<center/></h4>
-      <h6>Here are the details of the offer:</h6>
-      <h6>
-        <span>From <strong><%= @checkin.strftime("%A, %b %d") %></strong></span>
-        to
-        <span><strong><%= @checkout.strftime("%A, %b %d") %></strong></span>
-        <span>
-          (<%= "#{@diff_days}"%> <%= 'night'.pluralize(@diff_days) %>)
-        </span>
-        <span>
-       | For <strong><%= @guests_number %> persons</strong>
-        </span>
-      </h6>
-    </div>
-  </div>
+        <h6>Here are the details of the offer:</h6>
+        <h6>
+          <span>From <strong><%= @checkin.strftime("%A, %b %d") %></strong></span>
+          to
+          <span><strong><%= @checkout.strftime("%A, %b %d") %></strong></span>
+          <span>
+            (<%= "#{@diff_days}"%> <%= 'night'.pluralize(@diff_days) %>)
+          </span>
+          <span>
+           | For <strong><%= @guests_number %> persons</strong>
+         </span>
+       </h6>
+     </div>
+   </div>
 
-  <div class="product">
+   <div class="product">
     <div class="card-body product-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path @offer.domain.img_domain %>);">
       <div class="card-category-bot"></div>
       <div class="card-description-bot">
@@ -33,7 +33,7 @@
       <h6>Snow at the top: <strong><%= @offer.domain.snow_depth_high %> cm</strong></h6>
       <h6>Trend:
         <% @forecast_data.split("|").each do |condition| %>
-          <%= image_tag "#{condition}.png", {class: "img-circle", size: "25x25" }%>
+        <%= image_tag "#{condition}.png", {class: "img-circle", size: "25x25" }%>
         <% end %>
       </h6>
     </div>
@@ -43,8 +43,16 @@
     <div class="card-body product-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path @offer.flat_photo %>);">
       <div class="card-category-bot"></div>
       <div class="card-description-bot">
-        <h5><%= "#{@offer.flat_bedrooms_nb }" " bedroom".pluralize(@offer.flat_bedrooms_nb) %></h5>
-        <p>Flat Rating: <%= "%0.1f" % @offer.flat_ratings %></p>
+        <h5>Bedrooms:
+          <% @offer.flat_bedrooms_nb.times do %>
+          <i class="fa fa-bed" aria-hidden="true"></i>
+          <% end %>
+        </h5>
+        <p>Ratings:
+          <% @offer.flat_ratings.to_i.times do %>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <% end %>
+        </p>
       </div>
     </div>
     <div class='product-body'>
@@ -73,7 +81,7 @@
 
   <center>
     <%= simple_form_for([@offer, @order])  do |f| %>
-      <%= f.button :submit, "Book your trip", class: "btn-custom" %>
+    <%= f.button :submit, "Book your trip", class: "btn-custom" %>
     <% end %>
   </center>
 </div>
