fixed top offers shwo css

--- a/app/assets/stylesheets/components/_product.scss
+++ b/app/assets/stylesheets/components/_product.scss
@@ -21,6 +21,18 @@
   margin-bottom: 0;
 }
 
+.product-body-username {
+  padding: 0 10px 0 10px;
+}
+
+.product-body-username h4 {
+  margin: 25px 0 10px 0 !important;
+}
+
+.product-body-username h6 {
+  margin: 0 0 3px 0 !important;
+}
+
 /* Product image */
 .product-image {
   margin-right: 10px;
