--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,20 +1,18 @@
 <div class="container">
 
   <div class="product">
-    <div class='product-body'>
-      <h4><center><%= @offer.user.first_name %>,<center/></h4>
-        <h6>Here are the details of the offer:</h6>
-        <h6>
-          <span>From <strong><%= @checkin.strftime("%A, %b %d") %></strong></span>
-          to
-          <span><strong><%= @checkout.strftime("%A, %b %d") %></strong></span>
-          <span>
-            (<%= "#{@diff_days}"%> <%= 'night'.pluralize(@diff_days) %>)
-          </span>
-          <span>
-           | For <strong><%= @guests_number %> persons</strong>
-         </span>
-       </h6>
+    <div class='product-body product-body-username'>
+      <h4><%= @offer.user.first_name %>,</h4>
+      <h6>
+        <span>Ready to go </span>
+        <span>from <strong><%= @checkin.strftime("%A, %b %d") %></strong></span>
+        to
+        <span><strong><%= @checkout.strftime("%A, %b %d") %> ?  </strong></span>
+        <span>
+          (<%= "#{@diff_days}"%> <%= 'night'.pluralize(@diff_days) %>,
+        </span>
+        <span><%= @guests_number %> guests)</span>
+     </h6>
      </div>
    </div>
 
