--- a/app/assets/stylesheets/pages/_index_orders.scss
+++ b/app/assets/stylesheets/pages/_index_orders.scss
@@ -36,3 +36,29 @@ ul {
   justify-content: center;
 
 }
+
+.order-recap {
+  margin: 30px 0 20px;
+}
+
+.order-recap > h6 {
+  margin: 0 0 16px 0 !important;
+}
+
+.order-recap-details {
+  background-color: rgba(255, 255, 255, 0.7);
+  border: 1px solid rgba(210, 210, 210, 0.7);
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px 20px;
+}
+
+.order-recap-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.order-recap-item > h6 {
+  margin: 5px 0 !important;
+  padding: 0 !important;
+}
