Revert "New feature"

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
               <%= submit_tag "Search", class: "btn btn-custom" %>
             <% end %> -->
           </div>
-          <%= link_to image_tag('messenger-button.png', class: "btn-img btn-img-md"), "https://www.facebook.com/Snowbots-app-144970396308952/", target: "_blank" %>
+          <%= link_to image_tag('messenger-button.png', class: "btn-img btn-img-md"), "#" %>
     </div>
     </div>
 
